argocd/app/home-assistant/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  selector: {}
  template:
    metadata:
      name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-operations/home-assistant:2026.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: web
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /config
              name: config
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups:
          - 20
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: config
          emptyDir: {}
        - name: tmp
          emptyDir: {}
