argocd/app/home-assistant/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector: {}
  ports:
    - protocol: TCP
      port: 8123
      name: web
      targetPort: web
  type: ClusterIP
